Compiler/tests/good/range3.nx
type t = [0 .. 6];

type a : array t of t;

val v : a filled by 3;

printn(size(v));
