Compiler/tests/bad/bool8.nx
type t = [0 .. 1];
type a : array t of t;

printn(!a);
